--- a/style.css
+++ b/style.css
@@ -165,19 +165,19 @@ button:hover {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     border-radius: 2rem;
-    box-shadow: 1rem 1rem 2rem rgb(206, 206, 206);
+    box-shadow: 1rem 1rem 2rem hsl(0, 0%, 81%);
   }
 
   .score {
-    justify-content: center;
+    align-self: center;
     border-radius: 2rem;
-    max-width: 50%;
   }  
 
   .summary {
+    align-self: center;
     gap: 1rem;
   }
 
